task1/kyverno/bad-latest-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: latest-pod
  namespace: payments

spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault

  containers:
    - name: nginx
      image: nginx:latest

      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true

        capabilities:
          drop:
            - ALL
