task1/kyverno/bad-root-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-root
  namespace: payments

spec:
  containers:
    - name: nginx
      image: nginx:1.27
