task1/kyverno/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: require-image-tag

      match:
        any:
        - resources:
            kinds:
              - Pod

      validate:
        message: "Using latest tag is not allowed."

        pattern:
          spec:
            containers:
              - image: "!*:latest"
